--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="css/style.css">
   <meta charset="UTF-8">
-  <title>Document</title>
+  <title>Tic Tac Toe </title>
 </head>
 <body>
+  <h1>GA - WDi14 - Project 0</h1>
+  <h2>Tic Tac Toe Game</h2>
 
-
+<script src="js/main.js"></script>
 </body>
 </html>
