--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       type="image/png"
       href="img/ga-logo-undefined.png">
   <meta charset="UTF-8">
-  <title>MIMIMIMILA</title>
+  <title>TIC TAC TOE</title>
   <body>
     <div class="container">
       <header>
