--- a/index.html
+++ b/index.html
@@ -33,12 +33,12 @@
         </div>
         <div class="options">
           <div class="playerText"></div>
-          <button class="restart" onClick="start()">Restart</button>
-          <!-- <div>
+          <button class="restart" onClick="init()">Restart</button>
+          <div>
               <form>Single Player Mode
                 <input type="checkbox" id="autoPlay" checked>
             </form>
-          </div> -->
+          </div>
             <div class="score">SCORE:
                 <p></p>
               <button  onClick="resetScore()">Reset Score</button>
