--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           </div>
             <div class="score">SCORE:
                 <p></p>
-              <button  onClick="resetScore()">Reset Score</button>
+              <button class="btn" onClick="resetScore()">Reset Score</button>
             </div>
         </div>
       </div>
