--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           <button class="restart" onClick="init()">Restart</button>
           <div>
               <form>Single Player Mode
-                <input type="checkbox" id="autoPlay" checked>
+                <input type="checkbox" id="autoPlay" unchecked>
             </form>
           </div>
             <div class="score">SCORE:
