--- a/game-over.html
+++ b/game-over.html
@@ -19,7 +19,7 @@
       </header>
       <div class='tictactoe'>
           <h1>GAME OVER!</h1>
-          <h3><a href="https://github.com/fbi1714/ga-project-0/index.html">HOME</a></h3>
+          <h3><a href="https://fbi1714.github.com/ga-project-0/index.html">HOME</a></h3>
         </div>
       </div>
     </div>
